fix build problem

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
 dev = [
     "pyinstaller",
     "ruff",
+    "hatch",
 ]
 
 [build-system]
@@ -25,3 +26,9 @@ only-packages = true
 
 [tool.ruff.format]
 indent-style = "space"
+
+[project.scripts]
+pixiv-image-grouper = "pixiv_image_grouper.main:main"
+
+[tool.hatch.envs.default.scripts]
+build-exe = "pyinstaller src/pixiv_image_grouper/main.py --name pixiv-image-grouper --onefile"
