add unittest support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,3 +32,4 @@ pixiv-image-grouper = "pixiv_image_grouper.main:main"
 
 [tool.hatch.envs.default.scripts]
 build-exe = "pyinstaller src/pixiv_image_grouper/main.py --name pixiv-image-grouper --onefile"
+test = "python -m unittest discover -s tests"
