--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,9 @@ indent-style = "space"
 [project.scripts]
 pixiv-image-grouper = "pixiv_image_grouper.main:main"
 
+[tool.hatch.envs.default]
+features = ["dev"]
+
 [tool.hatch.envs.default.scripts]
 build-exe = "pyinstaller src/pixiv_image_grouper/main.py --name pixiv-image-grouper --onefile"
 test = "pytest tests"
