--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,24 +7,16 @@ dependencies = [
     "Pillow",
 ]
 
-[project.optional-dependencies]
-dev = [
-    "pyinstaller",
-    "ruff",
-    "hatch",
-    "pytest",
-    "mypy",
-]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.hatch.build.targets.wheel]
-packages = ["src/pixiv_image_grouper"]
+[tool.ruff]
+line-length = 120
 
-[tool.hatch.build]
-only-packages = true
+[tool.ruff.lint]
+select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
 
 [tool.ruff.format]
 indent-style = "space"
@@ -32,24 +24,13 @@ indent-style = "space"
 [project.scripts]
 pixiv-image-grouper = "pixiv_image_grouper.main:main"
 
-[tool.hatch.envs.default]
-features = ["dev"]
-
-[tool.hatch.envs.default.scripts]
-build-exe = "pyinstaller src/pixiv_image_grouper/main.py --name pixiv-image-grouper --onefile"
-test = "pytest tests"
-typecheck = "mypy src/pixiv_image_grouper tests"
-
-[tool.mypy]
-python_version = "3.12"
-warn_return_any = true
-warn_unused_configs = true
-disallow_untyped_defs = true
-disallow_incomplete_defs = true
-check_untyped_defs = true
-disallow_untyped_decorators = true
+[tool.ty]
+python-version = "3.12"
 
 [dependency-groups]
 dev = [
-    "mypy>=1.14.1",
+    "pyinstaller",
+    "pytest",
+    "ruff",
+    "ty",
 ]
